@@ -386,43 +386,3 @@ ofa_iimporter_progress_text( ofaIImporter *instance, ofsImporterParms *parms, co
 		my_iprogress_set_text( parms->progress, instance, text );
 	}
 }
-
-#if 0
-/**
- * ofa_iimporter_get_for_content:
- * @hub: the #ofaHub object of the application.
- * @content: the (guessed) mimetype of the imported file.
- *
- * Returns: a list of #ofaIImporter instances which are willing to deal
- * with the specified mimetype content.
- *
- * The returned list should be #g_list_free_full( L, ( GDestroyNotify ) g_object_unref )
- * by the caller.
- */
-GList *
-ofa_iimporter_get_for_content( ofaHub *hub, const gchar *content )
-{
-	GList *selected;
-	GList *importers, *it;
-	const GList *contents, *ic;
-	ofaExtenderCollection *extenders;
-
-	selected = NULL;
-	extenders = ofa_hub_get_extender_collection( hub );
-	importers = ofa_extender_collection_get_for_type( extenders, OFA_TYPE_IIMPORTER );
-
-	for( it=importers ; it ; it=it->next ){
-		contents = ofa_iimporter_get_accepted_contents( OFA_IIMPORTER( it->data ));
-		for( ic=contents ; ic ; ic=ic->next ){
-			if( !my_collate(( const gchar * ) ic->data, content )){
-				selected = g_list_prepend( selected, g_object_ref( it->data ));
-				break;
-			}
-		}
-	}
-
-	ofa_extender_collection_free_types( importers );
-
-	return( selected );
-}
-#endif
